@@ -1,3 +1,9 @@
+2004-10-03  Nicolas S. Dade  <ndade@nsd.dyndns.org>
+  
+	* pwsafe: added testv2.dat and added matching test to
+	  ./selftest
+	* pwsafe: added --mergedb
+	
 2004-10-02  Nicolas S. Dade  <ndade@nsd.dyndns.org>
   
 	* pwsafe: added -G/--ignore with default value {klipper,
